add undeploy feature, fix rollback, add paket merchant status to .env
